estilos en el body, creado el header y iniciada pagina de registro

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>  
-    <h1>JS bcules</h1>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor commodi ratione hic recusandae nostrum! Blanditiis voluptatem possimus molestias praesentium aperiam temporibus a! Beatae blanditiis, eaque iure fugit explicabo consequuntur iusto.</p>
+
+    <header>un header nuevo</header>
+
+    <h1>JS bucles</h1>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolor commodi ratione hic recusandae nostrum! Blanditiis voluptatem possimus molestias praesentium aperiam temporibus a! Beatae blanditiis, eaque iure fugit explicabo consequuntur iusto. se cambia un poco la data del parrafo </p>
     
 
     <script src="./js/while.js"></script>
